--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="content post-summary">
         As of writing, Unicode contains 1,112,064 possible codepoints.
  Actual codepoints range from 0 through 0x10FFFF though a part is reserved for backwards compatibility of other codecs with UTF-16, resulting in 1,112,064 actually available codepoints.
- It&rsquo;s important to note that not all (in fact most) codepoints are not characters. A common example is the Combining Diaeresis (e.g. ï) or the &ldquo;double dot above&rdquo; mark that, when redered, is supposed to appear above another character.
+ It&rsquo;s important to note that not all (in fact most) codepoints are not characters. A common example is the Combining Diaeresis (e.g. ï) or the &ldquo;double dot above&rdquo; mark that, when rendered, simply appears above the adjecent previous character.
     </div>
     
     
